--- a/index.html
+++ b/index.html
@@ -1,4 +1,36 @@
 <!DOCTYPE html>
-<h1> primeiro site </h1>
+<html lang="pt-br">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="widht=device-widht, initial-sxale=1.0">
+    <title>ANGELS BEAR</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+    <header class="cabecalho">
+        <img class="cabecalho-logo" src="IMAGENS/Logo.png" alt="">
+        <nav>
+            <a class="cabecalho-link" href="#"> HOME</a>
+            <a class="cabecalho-link" href="#">CONTATO</a>
+        </nav>
+    </header>
+    <main class="principal">
+        <section class="principal-capa">
+            <div class="principal-capa_combotao">
+                <div>
+                    <h2 class="principal-capa_titulo"> ANGELS BEAR </h2>
+                    <p class="principal-capa_texto"> Gostaria que tudo na vida fosse tão aconchegante como uma pelucia!
+                    </p>
+                </div>
+                <a class="principal-capa_botao" href="#"> Acesse nosso catalogo! </a>
+            </div>
+            <img class="principal-capa_imagem" src="IMAGENS/Logo.png" alt="">
+        </section>
+    </main>
+    <footer></footer>
+</body>
 
 </html>
